k8s-production/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gestion-notes
  labels:
    name: gestion-notes
