k8s-production/05-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: gestion-notes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: appnotes-backend:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /api/health
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /api/health
            port: 8000
          initialDelaySeconds: 60
          periodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: gestion-notes
spec:
  selector:
    app: backend
  ports:
  - port: 8000
    targetPort: 8000
  type: ClusterIP
